            - New routine cusps().
            - New constructor that takes a link and builds its complement.
            - The filename-or-contents constructor now throws an exception on
              error, instead of creating a null SnapPea triangulation.
            - Now supports move construction and copy/move assignment.
            - Added member and global swap() functions.
            - New routine nullify().
            - Added new routine enumerateCovers(), which combines SnapPea's
              find_representations() and construct_cover().
            - Changed gluingEquations() and gluingEquationsRect() to return a
              MatrixInt by value, not by pointer.
            - Changed homologyFilled() and fundGroupFilled() to return by
              const reference (not by pointer), and to throw exceptions
              when preconditions are not met (instead of returning null).
            - Replaced the two versions of volume() with separate functions
              volume() and volumeWithPrecision() (which was already what
              the Python interface offered).  Also, these routines now
              throw exceptions in the case of a null triangulation instead of
              silently returning zero volume.
            - Changed slopeEquations() to return by value (not by pointer),
              and to throw an exception if the triangulation is null.
            - Routines gluingEquations(), gluingEquationsRect(),
              fundGroupFilled() and homologyFilled() now have a precondition
              that this must not be a null SnapPea triangulation (instead of
              the old behaviour of returning a null pointer).
            - Changed canonise() and protoCanonise() to return by value
              (not pointer), and to throw exceptions on error.
            - Replaced the old filledTriangulation() (which used a polymorphic
              return type) with filledPartial() and filledAll() (whose return